--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
 ]
 
 [workspace.dependencies]
-clap = "3.0.0-beta.2"
+clap = { version = "4.5.39", features = ["derive"] }
 tokio = { version = "1.45.0", features = ["full"] }
 sodiumoxide = "0.2.7"
 serde = { version = "1.0.219", features = ["derive"] }
@@ -27,7 +27,7 @@ byteorder = "1.5.0"
 whoami = "1.6.0"
 qr2term = "0.3.3"
 eagre-asn1 = "0.3.0"
-reqwest = { version = "0.12.15", default_features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
 askama = "0.12.1"
 notify-rust = "4.11.7"
 run_script = "0.10.1"
