--- a/crates/kr/Cargo.toml
+++ b/crates/kr/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "akr"
 description = "Akamai MFA Developer CLI and SSH Agent"
-version = "1.1.2"
-authors = ["Alex Grinman <agrinman@akamai.com>"]
-edition = "2021"
-license = "All Rights Reserved, Akamai Technologies"
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+version.workspace = true
 
 [[bin]]
 name = "akr"
