--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 # https://rust-lang.github.io/rustup/overrides.html
 [toolchain]
-channel = "stable"
-components = ["rustfmt", "clippy"]
+channel = "1.87.0"
+components = ["clippy", "rustfmt"]
