--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ ansi_term = "0.12.1"
 directories = "6.0.0"
 dirs = "6.0.0"
 urlencoding = "2.1.3"
-nix = "0.30.1"
+nix = { version = "0.30.1", features = ["user"] }
 openssl = "0.10.73"
 bitflags = "2.9.1"
 ecdsa = "0.16.9"
