--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [workspace]
+resolver = "2"
 default-members = ["crates/kr"]
 
 members = [
@@ -13,35 +14,35 @@ sodiumoxide = "0.2.7"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_bytes = "0.11.17"
 serde_json = "1.0.140"
-serde-xml-rs = "0.6.0"
+serde-xml-rs = "0.8.1"
 async-trait = "0.1.88"
 base64 = "0.22.1"
-base64-serde = "0.7.0"
+base64-serde = "0.8.0"
 thiserror = "2.0.12"
 futures = "0.3.28"
 chrono = "0.4.41"
-uuid = { version = "0.8.2", features = ["serde", "v4"] }
-env_logger = "0.10.2"
+uuid = { version = "1.17.0", features = ["serde", "v4"] }
+env_logger = "0.11.8"
 log = "0.4.27"
 byteorder = "1.5.0"
 whoami = "1.6.0"
 qr2term = "0.3.3"
 eagre-asn1 = "0.3.0"
 reqwest = { version = "0.12.19", default-features = false, features = ["json", "rustls-tls"] }
-askama = "0.12.1"
+askama = "0.14.0"
 notify-rust = "4.11.7"
-run_script = "0.10.1"
+run_script = "0.11.0"
 ansi_term = "0.12.1"
-directories = "5.0.1"
-dirs = "5.0.1"
+directories = "6.0.0"
+dirs = "6.0.0"
 urlencoding = "2.1.3"
-nix = "0.29.0"
+nix = { version = "0.30.1", features = ["user"] }
 openssl = "0.10.73"
 bitflags = "2.9.1"
 ecdsa = "0.16.9"
 ring = "0.17.14"
 untrusted = "0.9.0"
-pem = "2.0.1"
+pem = "3.0.5"
 osshkeys = "0.7.0"
 
 # macOS
