--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,20 @@
 [workspace]
 resolver = "2"
 default-members = ["crates/kr"]
-
 members = [
     "crates/kr",
     "crates/ssh-agent"
 ]
+
+[workspace.package]
+authors = [
+    "Henry Zimmerman <hzimmerm@akamai.com>",
+    "James Wald <jwald@akamai.com>",
+    "Subhrajyoti Das <suda@akamai.com>"
+]
+edition = "2024"
+license = "All Rights Reserved, Akamai Technologies"
+version = "1.1.2"
 
 [workspace.dependencies]
 clap = { version = "4.5.39", features = ["derive"] }
