--- a/crates/kr/Cargo.toml
+++ b/crates/kr/Cargo.toml
@@ -45,7 +45,7 @@ nix.workspace = true
 openssl.workspace = true
 bitflags.workspace = true
 ecdsa.workspace = true
-ring.workspace = true
+aws-lc-rs.workspace = true
 untrusted.workspace = true
 pem.workspace = true
 osshkeys.workspace = true
